--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -41,7 +42,7 @@
      </ul>
      
 <div class="login-form">
-    <h1>Login</h1>
+   <h1>L<i class='bx bx-user-circle bx-spin bx-flip-horizontal' ></i>GIN</h1>
     <h4>NOTE * This is only for display purposes *</h4>
     <form action="error404.html" method="post">
         <p>Username</p>
